# ms2_pipeline_lite

./: environment.yml  input_output_walkthrough.ipynb  meta.yaml  pyproject.toml  test_ms2_lite.ipynb
.github/workflows/: documentation.yml
ms2_pipeline_lite/docs/source/: conf.py
ms2_pipeline_lite/gui/: check_spots.py
ms2_pipeline_lite/preprocessing/: import_data.py
ms2_pipeline_lite/prerequisites/: install_bioformats.py
ms2_pipeline_lite/spot_analysis/: refine_traces.py
