[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms2_pipeline_lite"
version = "0.0.1"
description = "Transcription spot analysis pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "yovanBadal", email = "ybadal@berkeley.edu"},
]
maintainers = [
    {name = "yovanBadal", email = "ybadal@berkeley.edu"},
]
keywords = ["transcription", "spot", "analysis", "pipeline", "tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "napari",
    "napari-ome-zarr",
    "numpy",
    "dask",
    "dask-image",
    "bioio",
    "bioio-czi",
    "bioio-dv",
    "bioio-imageio",
    "bioio-lif",
    "bioio-nd2",
    "bioio-ome-tiff",
    "bioio-ome-zarr",
    "bioio-sldy",
    "bioio-tifffile",
    "bioio-tiff-glob",
    "bioio-bioformats",
    "scyjava",
    "trackpy",
    "pandas",
    "tqdm",
    "magicgui",
]


[project.urls]
Homepage = "https://github.com/yourusername/ms2_pipeline_lite"
Documentation = "https://garcialab.berkeley.edu/transcription_pipeline/"
Repository = "https://github.com/yourusername/ms2_pipeline_lite"
"Bug Tracker" = "https://github.com/yourusername/ms2_pipeline_lite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ms2_pipeline_lite*"]
exclude = ["test_data*", ".github*", "*.ipynb_checkpoints*", "docs*"]

[tool.setuptools.exclude-package-data]
"*" = ["test_data/*", ".github/*", "*.ipynb", "*.ipynb_checkpoints/*"]